5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1723_2503.log
== SUBMITION (2019-05-15 22:00:13) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1))((-1)*i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.122062
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2503/main.py", line 7, in <module>
    soma = soma + (4/(2*i + 1))((-1)*i)
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:00:56) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1))((-1)*i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.170205
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2503/main.py", line 7, in <module>
    soma = soma + (4/(2*i + 1))((-1)*i)
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:00:56) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1))((-1)*i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + (4/(2*i + 1))((-1)*i)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:01:15) 
-- CODE:
n = float(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1))((-1)*i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.137959
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2503/main.py", line 7, in <module>
    soma = soma + (4/(2*i + 1))((-1)*i)
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:01:16) 
-- CODE:
n = float(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1))((-1)*i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + (4/(2*i + 1))((-1)*i)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:01:38) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
soma = soma + (4/(2*i + 1))((-1)*i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.215275
-- ERROR:
  File "/home/codebench/codes/1723/2503/main.py", line 7
    soma = soma + (4/(2*i + 1))((-1)*i)
       ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:01:56) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1))((-1)*i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + (4/(2*i + 1))((-1)*i)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:02:26) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1)((-1)*i))
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.176737
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2503/main.py", line 7, in <module>
    soma = soma + (4/(2*i + 1)((-1)*i))
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:02:32) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1)(-1)*i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.169509
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2503/main.py", line 7, in <module>
    soma = soma + (4/(2*i + 1)(-1)*i)
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:02:34) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1)(-1)*i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + (4/(2*i + 1)(-1)*i)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:02:34) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1)(-1)*i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.141334
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2503/main.py", line 7, in <module>
    soma = soma + (4/(2*i + 1)(-1)*i)
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:03:01) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1))((-1)*i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.134291
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2503/main.py", line 7, in <module>
    soma = soma + (4/(2*i + 1))((-1)*i)
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:07:08) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1))((-1)*i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.140591
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2503/main.py", line 7, in <module>
    soma = soma + (4/(2*i + 1))((-1)*i)
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:07:08) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1))((-1)*i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + (4/(2*i + 1))((-1)*i)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:07:10) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1))((-1)*i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.142241
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2503/main.py", line 7, in <module>
    soma = soma + (4/(2*i + 1))((-1)*i)
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:07:14) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1))((-1)*i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + (4/(2*i + 1))((-1)*i)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:34:29) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1))*((-1)**i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.191367
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
